--- a/.gitignore
+++ b/.gitignore
@@ -1,123 +1,11 @@
-# SMAIT HRI v2.0 - Git Ignore
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual environments
-venv/
-ENV/
-env/
-.venv/
-smait2/
-conda-env/
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-.project
-.pydevproject
-.settings/
-
-# Jupyter
-.ipynb_checkpoints/
-*.ipynb
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.nox/
-
-# Logs and recordings
-logs/
-*.log
-recordings/
-*.mp4
-*.wav
-*.avi
-
-# Config with secrets
 .env
-*.env
-config.local.yaml
-secrets.yaml
-
-# API keys (NEVER commit these)
-*_key.txt
-*_token.txt
-credentials.json
-
-# OS files
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Model files (too large for git)
-*.pt
-*.pth
-*.onnx
-*.pkl
-models/
-weights/
-
-# Temporary files
-tmp/
-temp/
-*.tmp
-*.bak
-tmp*
-
-# Build artifacts
+__pycache__/
 *.pyc
-*.pyo
-*.dll
-*.dylib
-
-# Data files (optional - uncomment if needed)
-# data/
-# datasets/
-# *.csv
-# *.json
-
-# Voice profiles (contain personal data)
-voice_profiles/
-embeddings/
-*.npy
-
-# MediaPipe cache
-mediapipe/
-
-# Profiling
-*.prof
-profile.out
-LASER_ASD/
-.claude/
-CLAUDE.md
-CLAUDE_CODE_OPTIMIZATION.md
-README_old.md
-smait_skills/
-github_setup/
-nul
+venv/
+*.onnx
+*.pt
+*.bin
+logs/
+docs/spec-page*
+docs/hardware-sdk/
+mockup*
